// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MoviesGrid function for fetch next films should be called after scrolling 1`] = `
<article
  className="movies_grid"
>
  <div>
    test
  </div>
  <div>
    test
  </div>
</article>
`;

exports[`MoviesGrid function for fetch next films should be called after scrolling 2`] = `
<article
  className="movies_grid"
>
  <div>
    test
  </div>
  <div>
    test
  </div>
</article>
`;

exports[`MoviesGrid renders correctly 1`] = `
<article
  className="movies_grid"
>
  <div>
    test
  </div>
  <div>
    test
  </div>
</article>
`;

exports[`MoviesGrid renders correctly 2`] = `
Array [
  <article
    className="movies_grid"
  >
    <div>
      test
    </div>
    <div>
      test
    </div>
  </article>,
  <div
    className="loading"
  >
    <div
      className="movies_grid_wrapper_loading"
      id="loading"
    >
      <div
        className="movies_grid_wrapper_loading"
      />
      <div
        className="movies_grid_wrapper_loading"
      />
      <div
        className="movies_grid_wrapper_loading"
      />
    </div>
    <div
      className="movies_grid_wrapper_loading_text"
      id="loading_text"
    >
      <span
        className="movies_grid_wrapper_loading_text_span"
      >
        LOADING
      </span>
    </div>
  </div>,
]
`;

exports[`MoviesGrid renders correctly 3`] = `
<article
  className="movies_grid"
>
  <span
    className="movies_grid__not_found"
  >
    No films found
  </span>
</article>
`;
